# bazel-sample

./: .gitignore  BUILD  README.md  WORKSPACE
childapp/: BUILD.bazel  go.mod  go.sum  main.go
hello/: BUILD.bazel  hello.proto
parentapp/: BUILD.bazel  go.mod  go.sum  main.go
