load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "childapp_lib",
    srcs = ["main.go"],
    importpath = "github.com/nrnrk/bazel-sample/childapp",
    visibility = ["//visibility:private"],
    deps = [
        "//hello",
        "//library/strlib",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "childapp",
    embed = [":childapp_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "childapp_image",
    embed = [":childapp_lib"],
    visibility = ["//visibility:public"],
)
