load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mwitkow_go_proto_validators//:validator_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],  # keep
)

go_proto_library(
    name = "hello_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/nrnrk/bazel-sample/hello/hello",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_mwitkow_go_proto_validators//:validators_golang"],  # keep
)

go_library(
    name = "hello",
    embed = [":hello_go_proto"],
    importpath = "github.com/nrnrk/bazel-sample/hello/hello",
    visibility = ["//visibility:public"],
)
