load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "parentapp_lib",
    srcs = ["main.go"],
    importpath = "github.com/nrnrk/bazel-sample/parentapp",
    visibility = ["//visibility:private"],
    deps = [
        "//hello",
        "@com_github_gin_gonic_gin//:gin",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "parentapp",
    embed = [":parentapp_lib"],
    visibility = ["//visibility:public"],
)
